updates to plots and csvs

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 *.pdf
 output_data/
 output_data_GPR_analysis/
+output_data_GPR_analysis_old/
+output_data_GPR_analysis_old2/
 chatgpt digests/
 __pycache__/
 .vscode/
